examples/test/testpolicy11752.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11752
  namespace: namespace58
spec:
  podSelector:
    matchLabels:
      key42: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value25
      podSelector:
        matchLabels:
          key13: value40
          key41: value15
          key46: value23
